# retail-orders-lakehouse

./: .gitignore  Makefile  README.md  pyproject.toml
data/sample/: customers.csv  order_items.csv  orders.csv  products.csv
src/retail_lakehouse/: cli.py
src/retail_lakehouse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/retail_lakehouse/ingest/: load_bronze.py
src/retail_lakehouse/quality/: checks.py
src/retail_lakehouse/transform/: build_silver.py
src/tests/: test_ingest_bronze.py  test_quality_checks.py  test_transform_silver.py
