[project]
name = "retail-lakehouse"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["duckdb>=1.0.0", "pandas>=2.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["src/tests"]
